--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-298.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-948.3KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇺🇸 美国-399.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇦 加拿大-4.58MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-338.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-505.7KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-430.2KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.95MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇰🇷 韩国-1.55MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-905.2KB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-5.92MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8888-dc2e36f27e2d, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇬🇧 英国-534.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-298.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
