--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇯🇵 日本-430.2KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.95MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇰🇷 韩国-1.55MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-905.2KB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-5.92MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8888-dc2e36f27e2d, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
-  - {name: 🇬🇧 英国-534.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-24.32MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.80MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-399.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-307.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇯🇵 日本-336.1KB/s(Youtube:不良林), server: jp06.xiaoqi99.cf, port: 10125, type: vmess, uuid: fbf813bf-8df7-4729-8e94-667b17544e0f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06.xiaoqi99.cf}}
+  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-905.2KB/s(Youtube:不良林)
-      - 未知国家-5.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-534.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-24.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
